# agentstack-starter

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: weekly-docker-test.yaml
src/beeai_agents/: agent.py
