[project]
name = "agentstack-agents"
version = "0.0.0"
description = "Agent built with Agent Stack"
readme = "README.md"
authors = [{ name = "BeeAI a Series of LF Projects, LLC" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "agentstack-sdk>=0.6.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
server = "agentstack_agents.agent:run"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]
